--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 *{
     scroll-behavior: smooth;
-    Font-size: 14px;
+    font-size: 14px;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
